; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_importance.c_ipc_importance_thread_call_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_importance.c_ipc_importance_thread_call_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ipc_importance_delayed_drop_queue = common dso_local global i32 0, align 4
@ipc_importance_task_delayed_drop_scan = common dso_local global i32 0, align 4
@ipc_importance_delayed_drop_call = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [20 x i8] c"ipc_importance_init\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipc_importance_thread_call_init() #0 {
  %1 = call i32 @queue_init(i32* @ipc_importance_delayed_drop_queue)
  %2 = load i32, i32* @ipc_importance_task_delayed_drop_scan, align 4
  %3 = call i32* @thread_call_allocate(i32 %2, i32* null)
  store i32* %3, i32** @ipc_importance_delayed_drop_call, align 8
  %4 = load i32*, i32** @ipc_importance_delayed_drop_call, align 8
  %5 = icmp eq i32* null, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @panic(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %0
  ret void
}

declare dso_local i32 @queue_init(i32*) #1

declare dso_local i32* @thread_call_allocate(i32, i32*) #1

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
